Mainly finished off the individual drinks page, also moved the location of the burger menu when you're browsing drinks on mobile. Fixed the proxy in the package json to point to the right ip.

--- a/src/index.css
+++ b/src/index.css
@@ -169,3 +169,7 @@ header h1{
   @apply rounded-lg;
   box-shadow: 1px 1px 8px rgba(0, 0, 10, 0.497);
 }
+
+body{
+  @apply bg-orange-200; 
+}
